## ****************************************************************************
##
##  Licensed to Accellera Systems Initiative Inc. (Accellera) 
##  under one or more contributor license agreements.  See the 
##  NOTICE file distributed with this work for additional 
##  information regarding copyright ownership. Accellera licenses 
##  this file to you under the Apache License, Version 2.0 (the
##  "License"); you may not use this file except in compliance
##  with the License.  You may obtain a copy of the License at
## 
##    http://www.apache.org/licenses/LICENSE-2.0
## 
##  Unless required by applicable law or agreed to in writing,
##  software distributed under the License is distributed on an
##  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
##  KIND, either express or implied.  See the License for the
##  specific language governing permissions and limitations
##  under the License.
##
## ****************************************************************************
##
##  Makefile.am --
##  Process this file with automake to produce a Makefile.in file.
##
## ****************************************************************************
##
##  Original Authors:
##  Norris Ip, Dean Shea, John Rose, Jasvinder Singh, William Paulsen,
##  John Pierce, Rachida Kebichi, Ted Elkind, David Bailey,
##  Cadence Design Systems, Inc., 2002-09-23
##
## ****************************************************************************
##
##  MODIFICATION LOG - modifiers, enter your name, affiliation, date and
##  changes you are making here.
##
##      Name, Affiliation, Date:
##  Description of Modification:
##
## ****************************************************************************

SUBDIRS = doc

EXTRA_DIST = \
	C17.blif \
	C17.out \
	C17.tst \
	C880.blif \
	C880.out \
	C880.tst \
	Makefile.cudd \
	README \
	bnet.c \
	bnet.h \
	chkMterm.c \
	main.c \
	mult32a.blif \
	mult32a.out \
	mult32a.tst \
	nanotrav.1 \
	ntr.c \
	ntr.h \
	ntrBddTest.c \
	ntrHeap.c \
	ntrMflow.c \
	ntrZddTest.c \
	rcn25.blif \
	rcn25.out \
	rcn25.tst \
	s27.blif \
	s27.out \
	s27.tst \
	tst.sh \
	ucbqsort.c

